@@ -11,6 +11,7 @@ export(gvisCandlestickChart, gvisSteppedAreaChart)
 export(gvisMerge)		 
 export(createGoogleGadget)		 
 export(plot.gvis)		 
+export(reactiveGvis)
 			 
 #Methods		 
 S3method(plot, gvis)		 
