@@ -158,8 +158,8 @@ gvisMerge <- function(x, y, horizontal=FALSE, tableOptions='border="0"',
                           jsData=paste(x$html$chart["jsData"], y$html$chart["jsData"], sep="\n"),
                           jsDrawChart=paste(x$html$chart["jsDrawChart"], y$html$chart["jsDrawChart"], sep="\n"),
                           jsDisplayChart=paste(x$html$chart["jsDisplayChart"], y$html$chart["jsDisplayChart"], sep="\n"),
-                          jsChart=paste(x$html$chart["jsChart"], y$html$chart["jsChart"], sep="\n"),
                           jsFooter=paste(x$html$chart["jsFooter"]),
+                          jsChart=paste(x$html$chart["jsChart"], y$html$chart["jsChart"], sep="\n"),
                           divChart= paste("\n<table ", tableOptions, ">\n<tr>\n<td>\n", x$html$chart["divChart"], "\n</td>\n",                            
                             ifelse(horizontal,"<td>\n","</tr>\n<tr>\n<td>\n"), y$html$chart["divChart"],
                             "\n</td>\n</tr>\n</table>\n", sep="")
