@@ -25,8 +25,8 @@ Using the Google Chart Tools with R
 \tabular{ll}{
 	Package: \tab googleVis\cr
 	Type: \tab Package\cr
-	Version: \tab 0.3.4\cr
-	Date: \tab 2012-01-26\cr
+	Version: \tab 0.4.0\cr
+	Date: \tab 2012-02-01\cr
 	License: \tab GPL version 2 or later\cr
 	 }
 	}
