@@ -206,8 +206,8 @@
 @misc{googleVis,
 	title = {google{V}is: Using the {G}oogle {C}hart {T}ools with {R}},
 	author = {Markus Gesmann and Diego de Castillo},
-	year = {2012},
-	note ={R package version 0.3.4},
+	year = {2013},
+	note ={R package version 0.4.0},
 	Howpublished = {\url{http://code.google.com/p/google-motion-charts-with-r/}}
 }
 
